--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,6 +63,10 @@ a {
   background-size: cover;
 }
 
+.about-container {
+  padding: 0 120px;
+}
+
 .contact-container {
   height: 80vh;
   background-image: url('https://img.freepik.com/free-vector/school-classroom-interior-university-educational-concept-blackboard-table_1441-1694.jpg?w=1060&t=st=1662340929~exp=1662341529~hmac=762b8ee31b95e3576e56562d66039e4d5ec558d41b89d1f93d01124fb3cf0a16');
@@ -73,4 +77,10 @@ a {
 
 .teacher-card {
   height: 450px !important;
+}
+
+@media (max-width: 767.98px) {
+  .about-container {
+    padding: 0 20px;
+  }
 }
